kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eventhub-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eventhub-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - eventhub-gateway
  http:
  - match:
    - uri:
        prefix: /events
    rewrite:
      uri: /events
    route:
    - destination:
        host: events-service
        port:
          number: 8081
  - match:
    - uri:
        prefix: /notifications
    rewrite:
      uri: /notifications
    route:
    - destination:
        host: notifications-service
        port:
          number: 8082
  - match:
    - uri:
        prefix: /ticketing
    rewrite:
      uri: /ticketing
    route:
    - destination:
        host: ticketing-service
        port:
          number: 8083
  - match:
    - uri:
        prefix: /payments
    rewrite:
      uri: /payments
    route:
    - destination:
        host: payments-service
        port:
          number: 8084
  - match:
    - uri:
        prefix: /users
    rewrite:
      uri: /users
    route:
    - destination:
        host: users-service
        port:
          number: 8085
